# advent-of-code

./: .envrc.example  .gitignore  CMakeLists.txt  Cargo.toml  README.md  advent-of-code.sln  flake.nix  rustfmt.toml
2015/day01/: Program.cs
2015/day02/: Program.cs
2015/day03/: Program.cs
2015/day04/: Program.cs
2015/day05/: Program.cs
2015/day06/: Program.cs
2015/day07/: Program.cs
2015/day08/: Program.cs
2017/: CMakeLists.txt
2018/: CMakeLists.txt
2018/day01/: CMakeLists.txt  main.cpp
2018/day02/: CMakeLists.txt  main.cpp
2018/day03/: CMakeLists.txt  main.cpp
2018/day04/: CMakeLists.txt  main.cpp
2018/day05/: CMakeLists.txt  main.cpp
2018/day06/: CMakeLists.txt  main.cpp
2018/day07/: CMakeLists.txt  main.cpp
2018/day08/: CMakeLists.txt  main.cpp
2018/day09/: CMakeLists.txt  main.cpp
2018/day10/: CMakeLists.txt  main.cpp
2018/day11/: CMakeLists.txt  main.cpp
2018/day12/: CMakeLists.txt  main.cpp
2018/day13/: CMakeLists.txt  main.cpp
2018/day14/: CMakeLists.txt  main.cpp
2018/day15/: CMakeLists.txt  main.cpp
2018/day16/: CMakeLists.txt  main.cpp
2018/day17/: CMakeLists.txt  main.cpp
2018/day18/: CMakeLists.txt  main.cpp
2018/day19/: CMakeLists.txt  input_annotated.txt  main.cpp
2018/day20/: CMakeLists.txt  main.cpp
2018/day21/: CMakeLists.txt  input_annotated.txt  main.cpp
2018/day22/: CMakeLists.txt  main.cpp
2018/day23/: CMakeLists.txt  main.cpp
2018/day24/: CMakeLists.txt  main.cpp
2018/day25/: CMakeLists.txt  main.cpp
scripts/: download_current_day_puzzle_input.sh  download_puzzle_inputs.sh
(+480 files in other folders)
